# AI-Learning-Tutor

./: .gitignore  DEPLOY.md  LICENSE  README.md  README_EN.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  start-web.bat  start-web.sh  test_connection.py
ai_tutor/: __init__.py  __main__.py  cli.py  core.py  llm.py  prompts.py  state.py
web/: __init__.py  server.py  service.py
web/api/: export.py  learn.py  sessions.py
web/static/: index.html  learn.html  notes.html  sessions.html
web/static/css/: tokens.css
web/static/js/: animations.js  learn.js
