[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-learning-tutor"
version = "0.1.0"
description = "AI-powered personalized learning tutor"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Learning Tutor Contributors"}
]
keywords = ["ai", "learning", "education", "claude", "tutor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "anthropic>=0.25.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
ai-tutor = "ai_tutor.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-learning-tutor"
Repository = "https://github.com/yourusername/ai-learning-tutor"
Issues = "https://github.com/yourusername/ai-learning-tutor/issues"
